iac/vpc.tf
resource "aws_vpc" "codecoco_vpc" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "property vpc"
  }
}
